<resources>
    <string name="app_name">GWLTask</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="Networkfailed">Network is failed, Please enable your mobile networks</string>
    <string name="Welcome">Welcome \n Good Work Labs</string>
    <string name="Dashbaord">Dashbaord</string>
    <string name="LatestRecords">Latest Records</string>
    <string name="NoData">No Data is available !!"</string>
    <string name="UserID">User ID : </string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>

</resources>