<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.herojit.gwl.viewmodels.MainDashboardViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_DoyouhaveQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/margin_5"
        app:cardElevation="@dimen/margin_10"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:minHeight="@dimen/margin_100"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtUserID"
                    style="@style/simpletextQuestion_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_2"
                    android:text="@string/UserID" />

                <TextView
                    android:id="@+id/txtUserIDvalue"
                    style="@style/simpletextQuestGray_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:padding="@dimen/margin_2"
                    android:text="@{model.ID}" />
            </TableRow>

            <TextView
                android:id="@+id/txtTitle"
                style="@style/simpletextQuestion_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:padding="@dimen/margin_2"
                android:text="@string/Title" />

            <TextView
                android:id="@+id/txtTitleValue"
                style="@style/simpletextQuestGray_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.Title}" />

            <TextView
                android:id="@+id/txtDescription"
                style="@style/simpletextQuestion_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:padding="@dimen/margin_2"
                android:text="@string/Description" />

            <TextView
                android:id="@+id/txtDescriptionValue"
                style="@style/simpletextQuestGray_l"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_5"
                android:padding="@dimen/margin_2"
                android:text="@{model.Body}" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>