<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.herojit.gwl.viewmodels.MainDashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:id="@+id/tblrw"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_45"
            android:background="@color/colorPrimary"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/txttitle"
                style="@style/simpletextHeading_20"
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Dashbaord" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="@dimen/margin_20"
                android:layout_height="@dimen/margin_20"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/margin_15"
                android:background="@drawable/icon_refresh"
                android:onClick="@{model::onRefreshClick}" />

        </TableRow>

        <TextView
            android:id="@+id/txtLatestRecords"
            style="@style/simpletextHeading_15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:gravity="center"
            android:text="@string/LatestRecords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tblrw" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLatestRecords" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLatestRecords" />


        <TextView
            android:id="@+id/txtNodata"
            style="@style/simpletextHeading_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="@string/NoData"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLatestRecords" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>